Pull request #25293: MBS-13615-add-missing-spm-mirrors-2
Merge in MA/avito-ios from MBS-13615-add-missing-spm-mirrors-2 to develop

* commit '58cd41ac6e35d894beeb79d7f184a65ae8809fb3':
  MBS-13615: Add missing mirrors to spm_mirrors.json
  MBS-13615: Add missing mirrors to spm_mirrors.json
  Revert "MBS-13615: remove mirror from CLT"
  MBS-13615: Add missing mirrors to spm_mirrors.json
  MBS-13615: remove mirror from CLT
  MBS-13615: Fix mirrors.json generation.

GitOrigin-RevId: e62fe6710b61e4a37d0492734ca71a81c5daef2e

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies" : {
+    "mirrorFilePath": {
+        "root": "repoRoot",
+        "relativePath": "ci_automation/swift/spm_mirrors.json"
+    },
     "external" : {
         "Signals": {
             "url": "https://github.com/IBM-Swift/BlueSignals.git",
